--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@merrywhether/config",
-  "version": "0.1.2",
+  "version": "1.0.0-alpha.0",
   "description": "Common config files for @merrywhether projects",
   "bin": {
     "mw-config": "./index.js"
@@ -13,6 +13,16 @@
   "license": "ISC",
   "homepage": "https://github.com/merrywhether/config#readme",
   "dependencies": {
-    "command-line-args": "^5.1.1"
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "command-line-args": "^5.1.1",
+    "eslint": "^7.22.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3",
+    "typescript-styled-plugin": "^0.15.0"
   }
 }
