--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@merrywhether/config",
-  "version": "1.0.0-alpha.8",
+  "version": "1.0.0-beta",
   "description": "Common config files for @merrywhether projects",
   "bin": {
     "mw-config": "./index.js"
@@ -16,7 +16,7 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "command-line-args": "^5.1.1",
-    "eslint": "^7.22.0",
+    "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
