--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@merrywhether/config",
-  "version": "1.1.1",
+  "version": "2.0.0-alpha.0",
   "description": "Common config files for @merrywhether projects",
   "bin": {
     "mw-config": "./index.js"
