--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,18 +2,21 @@ name: Lint
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches-ignore:
+      - renovate/**
 
 jobs:
   Check:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Install and cache
-        uses: bahmutov/npm-install@v1
+      - name: Setup yarn caching
+        uses: actions/setup-node@v2
+        with:
+          node-version: 'lts/*'
+          cache: 'yarn'
+      - name: Install
+        run: yarn install
       - name: Lint
         run: yarn lint
