--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,9 @@
 {
-  "extends": ["config:base", ":preserveSemverRanges"]
+  "extends": [
+    "config:base",
+    ":preserveSemverRanges",
+    "helpers:disableTypesNodeMajor"
+  ],
+  "schedule": ["before 8am"],
+  "timezone": "America/Los_Angeles"
 }
