--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,9 +6,9 @@ updates:
     directory: "/"
     commit-message:
       prefix: "npm"
-    ignore:
-      - dependency-name: "*"
-        update-types: ["version-update:semver-patch"]
+    # ignore:
+    #   - dependency-name: "*"
+    #     update-types: ["version-update:semver-patch"]
     schedule:
       #interval: "weekly"
       interval: "daily"
