--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: Install and cache
       # https://github.com/marketplace/actions/setup-node-js-environment
-      - uses: actions/setup-node@v2
+        uses: actions/setup-node@v2
         with:
           node-version: 'lts/*'
           cache: 'yarn'
