--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,12 +10,12 @@ jobs:
 
     steps:
       - name: Checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: Install and cache
-      - uses: actions/setup-node@v2
+        uses: actions/setup-node@v2
         with:
           node-version: 'lts/*'
           cache: 'yarn'
-      - run: yarn install
+        run: yarn install
       - name: Lint
         run: yarn lint
