--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,11 +11,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Install and cache
+      - name: Setup yarn caching
         uses: actions/setup-node@v2
         with:
           node-version: 'lts/*'
           cache: 'yarn'
+      - name: Install
         run: yarn install
       - name: Lint
         run: yarn lint
