--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,13 +1,15 @@
 name: Lint
 
 on:
-  pull_request:
-    branches: [main]
+  push:
+    branches-ignore:
+      - dependabot/**
+
+
 
 jobs:
   Check:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v2
