--- a/.github/workflows/dependabot-upgrade.yml
+++ b/.github/workflows/dependabot-upgrade.yml
@@ -1,4 +1,4 @@
-name: Dependabot
+name: Dependabot Upgrade
 
 on:
   push:
@@ -6,13 +6,16 @@ on:
       - dependabot/**
 
 jobs:
-  Upgrade:
+  Check:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          # https://medium.com/prompt/trigger-another-github-workflow-without-using-a-personal-access-token-f594c21373ef
+          ssh-key: "${{ secrets.COMMIT_KEY }}"
         # https://github.com/marketplace/actions/setup-node-js-environment
       - name: Setup yarn caching
         uses: actions/setup-node@v2
@@ -26,7 +29,7 @@ jobs:
       - name: Check Diff
         id: check_diff
         run: |
-          changes=0
+          changes=0\
           git diff-index --quiet HEAD -- || changes=$?
           echo "::set-output name=changes::${changes}"
       - name: No changes
@@ -41,19 +44,7 @@ jobs:
           git add .
           git commit -m "Upgrade transitive dependencies"
           git push
-  yarnlock_Changes:
-    needs: Upgrade
-    runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      # https://github.com/marketplace/actions/yarn-lock-changes
-      - name: Yarn Lock Changes
-        uses: Simek/yarn-lock-changes@main
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          exit 1
   Lint:
     needs: Upgrade
     runs-on: ubuntu-latest
@@ -69,24 +60,3 @@ jobs:
         run: yarn install
       - name: Lint
         run: yarn lint
-  AutoMerge_Patch:
-    needs: Lint
-    runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
-      contents: write
-    steps:
-      - name: Get Dependabot metadata
-        id: metadata
-        uses: dependabot/fetch-metadata@v1.1.1
-        with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - name: Auto-merge for Dependabot patch PRs
-        if: ${{ steps.metadata.outputs.update-type == 'version-update:semver-patch' }}
-        run: gh pr merge --auto --merge "$PR_URL"
-        env:
-          PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      - name: Await manual approval for Dependabot non-patch PRs
-        if: ${{ steps.metadata.outputs.update-type != 'version-update:semver-patch' }}
-        run: echo "Needs human approval"
