Better naming for bot

--- a/.github/workflows/dependabot-upgrade.yml
+++ b/.github/workflows/dependabot-upgrade.yml
@@ -39,8 +39,8 @@ jobs:
         if: ${{ steps.check_diff.outputs.changes != 0 }}
         run: |
           echo "Committing yarn.lock changes"
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name merrywhether-bot
+          git config user.email bot@risto.io
           git add .
           git commit -m "Upgrade transitive dependencies"
           git push
