--- a/.github/workflows/dependabot-upgrade.yml
+++ b/.github/workflows/dependabot-upgrade.yml
@@ -1,4 +1,4 @@
-name: Dependencies
+name: [DB] Upgrade
 
 on:
   push:
@@ -6,16 +6,13 @@ on:
       - dependabot/**
 
 jobs:
-  Upgrade:
+  Check:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          # https://medium.com/prompt/trigger-another-github-workflow-without-using-a-personal-access-token-f594c21373ef
-          ssh-key: "${{ secrets.COMMIT_KEY }}"
         # https://github.com/marketplace/actions/setup-node-js-environment
       - name: Setup yarn caching
         uses: actions/setup-node@v2
@@ -37,6 +34,8 @@ jobs:
         run: echo "No yarn.lock changes"
       - name: Update Branch
         if: ${{ steps.check_diff.outputs.changes != 0 }}
+        with:
+          ssh-key: "${{ secrets.COMMIT_KEY }}"
         run: |
           echo "Committing yarn.lock changes"
           git config user.name merrywhether[bot]
@@ -46,7 +45,7 @@ jobs:
           git push
           exit 1
   Lint:
-    needs: Upgrade
+    needs: Check
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
