--- a/.github/workflows/dependabot-upgrade.yml
+++ b/.github/workflows/dependabot-upgrade.yml
@@ -14,6 +14,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         # https://github.com/marketplace/actions/setup-node-js-environment
+        with:
+          ssh-key: "${{ secrets.COMMIT_KEY }}asdf"
       - name: Setup yarn caching
         uses: actions/setup-node@v2
         with:
@@ -34,14 +36,10 @@ jobs:
         run: echo "No yarn.lock changes"
       - name: Update Branch
         if: ${{ steps.check_diff.outputs.changes != 0 }}
-        with:
-          ssh-key: "${{ secrets.COMMIT_KEY }}"
         run: |
-          echo "Committing yarn.lock changes"
           git config user.name merrywhether[bot]
           git config user.email bot@risto.io
-          git add .
-          git commit -m "Upgrade transitive dependencies"
+          git commit -am "Upgrade transitive dependencies"
           git push
           exit 1
   Lint:
