--- a/.github/workflows/dependabot-upgrade.yml
+++ b/.github/workflows/dependabot-upgrade.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
         # https://github.com/marketplace/actions/setup-node-js-environment
         with:
-          ssh-key: "${{ secrets.COMMIT_KEY }}asdf"
+          ssh-key: "${{ secrets.COMMIT_KEY }}"
       - name: Setup yarn caching
         uses: actions/setup-node@v2
         with:
