--- a/.github/workflows/dependency-upgrade.yml
+++ b/.github/workflows/dependency-upgrade.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
         # https://github.com/marketplace/actions/setup-node-js-environment
         with:
-          ssh-key: "${{ secrets.COMMIT_KEY }}"
+          token: "${{ secrets.MERGEWHETHER_TOKEN }}"
       - name: Setup yarn caching
         uses: actions/setup-node@v2
         with:
@@ -26,29 +26,23 @@ jobs:
         run: yarn install
       - name: Upgrade
         run: yarn upgrade
-      - name: Set Commit Author
+      - name: Check Diff
+        id: check_diff
+        run: |
+          changes=0\
+          git diff-index --quiet HEAD -- || changes=$?
+          echo "::set-output name=changes::${changes}"
+      - name: No changes
+        if: ${{ steps.check_diff.outputs.changes == 0 }}
+        run: echo "No yarn.lock changes"
+      - name: Update Branch
+        if: ${{ steps.check_diff.outputs.changes != 0 }}
         run: |
           git config user.name merrywhether[bot]
           git config user.email bot@risto.io
-      - run: "git commit -am 'Upgrade transitive dependencies' || exit 0"
-      - run: "git push"
-      # - name: Check Diff
-      #   id: check_diff
-      #   run: |
-      #     changes=0\
-      #     git diff-index --quiet HEAD -- || changes=$?
-      #     echo "::set-output name=changes::${changes}"
-      # - name: No changes
-      #   if: ${{ steps.check_diff.outputs.changes == 0 }}
-      #   run: echo "No yarn.lock changes"
-      # - name: Update Branch
-      #   if: ${{ steps.check_diff.outputs.changes != 0 }}
-      #   run: |
-      #     git config user.name merrywhether[bot]
-      #     git config user.email bot@risto.io
-      #     git commit -am "Upgrade transitive dependencies"
-      #     git push
-      #     exit 1
+          git commit -am "Upgrade transitive dependencies"
+          git push
+          exit 1
   Lint:
     needs: Check
     runs-on: ubuntu-latest
