--- a/.github/workflows/dependency-upgrade.yml
+++ b/.github/workflows/dependency-upgrade.yml
@@ -16,8 +16,7 @@ jobs:
         uses: actions/checkout@v2
         # https://github.com/marketplace/actions/setup-node-js-environment
         with:
-          # token: ${{ secrets.MERGEWHETHER_TOKEN }}
-          ssh-key: ${{ secrets.COMMIT_KEY }}
+          token: ${{ secrets.MERGEWHETHER_TOKEN }}
       - name: Setup yarn caching
         uses: actions/setup-node@v2
         with:
