Renovate locking better again

--- a/renovate.json
+++ b/renovate.json
@@ -4,11 +4,5 @@
     ":preserveSemverRanges",
     "helpers:disableTypesNodeMajor"
   ],
-  "schedule": ["before 8am"],
-  "timezone": "America/Los_Angeles",
-  "allowedPostUpgradeCommands": ["^yarn upgrade$"],
-  "postUpgradeTasks": {
-    "commands": ["yarn upgrade"],
-    "executionMode": "branch"
-  }
+  "rangeStrategy": "bump"
 }
