--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "~5.1.0",
-    "@typescript-eslint/parser": "~5.1.0",
-    "command-line-args": "~5.2.0",
-    "eslint": "~8.1.0",
-    "eslint-config-prettier": "~8.3.0",
-    "eslint-plugin-import": "~2.25.2",
-    "eslint-plugin-prettier": "~4.0.0",
-    "eslint-plugin-react": "~7.26.1",
-    "eslint-plugin-react-hooks": "~4.2.0",
-    "eslint-plugin-solid": "~0.1.2",
-    "eslint-plugin-sort-destructure-keys": "~1.3.5",
-    "eslint-plugin-sort-keys-fix": "~1.1.2",
-    "eslint-plugin-typescript-sort-keys": "~2.0.0",
-    "prettier": "~2.4.1",
-    "typescript": "~4.4.4",
-    "typescript-styled-plugin": "~0.18.1"
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "command-line-args": "^5.2.0",
+    "eslint": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-solid": "^0.1.2",
+    "eslint-plugin-sort-destructure-keys": "^1.3.5",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-typescript-sort-keys": "^2.0.0",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4",
+    "typescript-styled-plugin": "^0.18.1"
   }
 }
