--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,4 @@
 {
-  "extends": [
-    "config:base",
-    ":preserveSemverRanges",
-    "helpers:disableTypesNodeMajor"
-  ],
+  "extends": ["config:base", "helpers:disableTypesNodeMajor"],
   "rangeStrategy": "bump"
 }
