--- a/.github/workflows/dependency-upgrade.yml
+++ b/.github/workflows/dependency-upgrade.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: 'lts/*'
           cache: 'yarn'
       - name: Install
-        run: yarn install
+        run: yarn install --ignore-scripts --frozen-lockfile
       - name: Upgrade
         run: yarn upgrade
       - name: Commit Changes
