--- a/.github/workflows/yarnlock.yml
+++ b/.github/workflows/yarnlock.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Yarn Lock Changes
         uses: Simek/yarn-lock-changes@main
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.COMMENT_KEY }}
