--- a/.github/workflows/dependency-upgrade.yml
+++ b/.github/workflows/dependency-upgrade.yml
@@ -2,21 +2,29 @@ name: Dependency Upgrade
 
 on:
   push:
-    branches:
-      - renovate/**
+    branches: [renovate/**]
 
 jobs:
+  Info:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Info
+        run: |
+          echo "${{ github.base_ref }} ${{ github.head_ref }} ${{ github.ref }}"
+          echo "info"
+
   Check:
+    if: ${{ startsWith(github.head_ref, 'renovate/') }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        # https://github.com/marketplace/actions/setup-node-js-environment
         with:
           # https://medium.com/prompt/trigger-another-github-workflow-without-using-a-personal-access-token-f594c21373ef
           ssh-key: ${{ secrets.COMMIT_KEY }}
+        # https://github.com/marketplace/actions/setup-node-js-environment
       - name: Setup yarn caching
         uses: actions/setup-node@v2
         with:
@@ -33,18 +41,3 @@ jobs:
           git commit -am "Upgrade transitive dependencies" || exit 0
           git push
           exit 1
-  Lint:
-    needs: Check
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup yarn caching
-        uses: actions/setup-node@v2
-        with:
-          node-version: 'lts/*'
-          cache: 'yarn'
-      - name: Install
-        run: yarn install
-      - name: Lint
-        run: yarn lint
