Tweak default functionality (#29)

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,8 +2,9 @@ name: Lint
 
 on:
   push:
-    branches-ignore:
-      - renovate/**
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   Check:
