--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,5 +19,7 @@ jobs:
           cache: 'yarn'
       - name: Install
         run: yarn install
-      - name: Lint
-        run: yarn lint
+      - name: ESLint
+        run: yarn lint:es
+      - name: Prettier
+        run: yarn lint:md
