--- a/package.json
+++ b/package.json
@@ -25,21 +25,22 @@
     "node": ">=v16.13.2"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "command-line-args": "^5.2.0",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-solid": "^0.4.0",
-    "eslint-plugin-sort-destructure-keys": "^1.4.0",
+    "@styled/typescript-styled-plugin": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "command-line-args": "^5.2.1",
+    "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-solid": "^0.12.1",
+    "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
-    "eslint-plugin-typescript-sort-keys": "^2.1.0",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.5",
-    "typescript-styled-plugin": "^0.18.2"
-  }
+    "eslint-plugin-typescript-sort-keys": "^2.3.0",
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.3"
+  },
+  "packageManager": "pnpm@8.6.4"
 }
