--- a/.github/workflows/dependency-upgrade.yml
+++ b/.github/workflows/dependency-upgrade.yml
@@ -11,20 +11,20 @@ jobs:
       contents: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           # https://medium.com/prompt/trigger-another-github-workflow-without-using-a-personal-access-token-f594c21373ef
           ssh-key: ${{ secrets.COMMIT_KEY }}
         # https://github.com/marketplace/actions/setup-node-js-environment
-      - name: Setup yarn caching
-        uses: actions/setup-node@v2
+      - name: Setup Caching
+        uses: actions/setup-node@v3
         with:
           node-version: 'lts/*'
-          cache: 'yarn'
+          cache: 'pnpm'
       - name: Install
-        run: yarn install --ignore-scripts --frozen-lockfile
-      - name: Upgrade
-        run: yarn upgrade
+        run: pnpm install --ignore-scripts --frozen-lockfile
+      - name: Dedupe
+        run: pnpm dedupe
       - name: Commit Changes
         run: |
           git config user.name mergewhether
