--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -13,16 +13,16 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ssh-key: ${{ secrets.COMMIT_KEY }}
-      - name: Setup yarn
-        uses: actions/setup-node@v2
+      - name: Setup pnpm
+        uses: actions/setup-node@v3
         with:
           node-version: 'lts/*'
       - name: Version
         run: |
           git config user.name mergewhether
           git config user.email bot@risto.io
-          yarn version --new-version ${{ github.event.inputs.version }}
+          pnpm version --new-version ${{ github.event.inputs.version }}
           git push --follow-tags
