--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -17,6 +17,10 @@ jobs:
         with:
           ssh-key: ${{ secrets.COMMIT_KEY }}
       - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          run_install: false
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 'lts/*'
