--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          run_install: false
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 'lts/*'
