--- a/.github/workflows/dependency-upgrade.yml
+++ b/.github/workflows/dependency-upgrade.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Node + caching
         uses: actions/setup-node@v3
         with:
-          node-version: 'lts/*'
+          node-version: '20'
           cache: 'pnpm'
       - name: Install
         run: pnpm install --ignore-scripts --frozen-lockfile
