--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Node + caching
         uses: actions/setup-node@v3
         with:
-          node-version: 'lts/*'
+          node-version: '20'
           cache: 'pnpm'
       - name: Install
         run: pnpm install
