--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-solid": "^0.13.0",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-typescript-sort-keys": "^3.0.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   },
@@ -62,6 +63,9 @@
       "optional": true
     },
     "eslint-plugin-solid": {
+      "optional": true
+    },
+    "eslint-plugin-typescript-sort-keys": {
       "optional": true
     },
     "prettier": {
