--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "bin": {
     "mw-config": "./index.js"
   },
+  "type": "module",
+  "exports": {
+    "./eslint": "./src/eslint/index.js",
+    "./prettier": "./src/prettier.js",
+    "./ts-base": "./src/tsconfig/base.json",
+    "./ts-solid": "./src/tsconfig/solid.json",
+    "./ts-styled": "./src/tsconfig/styled.json"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/merrywhether/config.git"
@@ -24,12 +32,10 @@
     "node": ">=20.12.2"
   },
   "dependencies": {
-    "command-line-args": "^5.2.1"
-  },
-  "peerDependencies": {
-    "@styled/typescript-styled-plugin": "^1.0.1",
+    "@eslint/js": "^8.57.0",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
+    "command-line-args": "^5.2.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -40,49 +46,18 @@
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-typescript-sort-keys": "^3.2.0",
+    "globals": "^15.0.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.6.0"
+  },
+  "peerDependencies": {
+    "@styled/typescript-styled-plugin": "^1.0.1"
   },
   "peerDependenciesMeta": {
     "@styled/typescript-styled-plugin": {
       "optional": true
-    },
-    "@typescript-eslint/eslint-plugin": {
-      "optional": true
-    },
-    "@typescript-eslint/parser": {
-      "optional": true
-    },
-    "eslint-plugin-prettier": {
-      "optional": true
-    },
-    "eslint-plugin-react": {
-      "optional": true
-    },
-    "eslint-plugin-react-hooks": {
-      "optional": true
-    },
-    "eslint-plugin-solid": {
-      "optional": true
-    },
-    "eslint-plugin-typescript-sort-keys": {
-      "optional": true
-    },
-    "prettier": {
-      "optional": true
-    },
-    "typescript": {
-      "optional": true
     }
-  },
-  "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "eslint-plugin-sort-keys-fix": "^1.1.2",
-    "prettier": "^3.2.5"
   },
   "packageManager": "pnpm@8.15.6"
 }
