--- a/renovate.json5
+++ b/renovate.json5
@@ -10,6 +10,9 @@
     "config:recommended",
     "helpers:pinGitHubActionDigests"
   ],
+  "automerge": true,
+  "automergeComment": "+reno",
+  "automergeType": "pr-comment",
   "commitMessageAction": "Renovate",
   "dependencyDashboard": true,
   "postUpdateOptions": [
