Adjust patch automerge for packages

--- a/renovate.json5
+++ b/renovate.json5
@@ -21,7 +21,7 @@
   "rangeStrategy": "bump",
   "timezone": "America/Los_Angeles",
   "patch": {
-    "automerge": true
+    "automergeType": "pr"
   },
   "rebaseWhen": "behind-base-branch"
 }
