--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,7 +5,7 @@
     "noEmit": false,
     "declaration": true,
     "declarationDir": "@types",
-    "rootDir": "src/projen"
+    "rootDir": "src"
   },
-  "include": ["src/projen"]
+  "include": ["src"]
 }
