Improve auto-approve config

--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -16,8 +16,7 @@ jobs:
       - uses: github/privileged-requester@v2.1.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          handle: 'mergewhether[bot]'
-          path: config/privileged-requester.yaml
+          path: .github/config/privileged-requester.yaml
           prCreator: ${{ github.event.pull_request.user.login }}
           prNumber: ${{ github.event.pull_request.number }}
           checkDiff: 'false'
