--- a/.github/workflows/magic-comment-approval.yml
+++ b/.github/workflows/magic-comment-approval.yml
@@ -19,6 +19,7 @@ jobs:
             const comment = context.payload.comment.body.toLowerCase();
             const isLgtm = comment.includes('lgtm');
             const isOwner = context.payload.repository.owner.login === context.payload.comment.user.login;
+            console.log(isLgtm, isOwner);
             return { approve: isLgtm && isOwner };
 
       - name: Approve PR
