--- a/.github/workflows/magic-comment-approval.yml
+++ b/.github/workflows/magic-comment-approval.yml
@@ -24,5 +24,5 @@ jobs:
               repo: context.repo.repo,
               pull_number: context.issue.number,
               event: 'APPROVE',
-              body: 'LGTM'
+              body: '🌵'
             })
