--- a/.github/workflows/magic-comment-approval.yml
+++ b/.github/workflows/magic-comment-approval.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Approve PR if magic comment
+      - name: Approve if my magic comment
         id: check_comment
         if:
-          ${{ github.event.comment.body == 'Approved' &&
-          github.event.comment.user.login == 'merrywhether' }}
-        uses: actions/github-script@v4
+          ${{ github.event.comment.user.login == 'merrywhether' &&
+          contains(toLower(github.event.comment.body), 'approved') }}
+        uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
