--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "knitwork": "^1.1.0",
     "prettier": "^3.2.5",
     "projen": "^0.81.13",
+    "semver": "^7.6.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.9.0"
   },
@@ -79,7 +80,8 @@
     }
   },
   "devDependencies": {
-    "@types/node": "^20.12.8"
+    "@types/node": "^20.12.8",
+    "@types/semver": "^7.5.8"
   },
   "packageManager": "pnpm@9.1.1"
 }
