Updates for TS 5.5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
 {
   "extends": "@merrywhether/config/ts-base",
   "compilerOptions": {
-    "checkJs": true
+    "allowJs": true,
+    "checkJs": true,
+    "isolatedDeclarations": false
   },
   "include": [
     ".projenrc.js",
